--- a/branchAndBound.ipynb
+++ b/branchAndBound.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5aab25d0-4447-4e7a-983e-216ac91f9c16",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b994bb06-0dea-43b4-ace7-799fe0d46c38",
    "metadata": {},
    "outputs": [],
@@ -247,20 +247,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ac5494f0-b947-48e3-977c-4041c85785d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\Problem name: \n",
+      "\n",
+      "Minimize\n",
+      "OBJROW: -9 x_1 -7 x_2 -10 x_3 -7 x_4 -9 x_5 -6 x_6 -8 x_7 -4 x_8 -9 x_9\n",
+      "Subject To\n",
+      "constr(0):  4 x_1 + 9 x_2 + 4 x_3 + x_4 + 9 x_5 + 6 x_6 + 3 x_7 + 6 x_8 + x_9 <= 40\n",
+      "constr(1):  3 x_1 + 7 x_2 + 8 x_3 + 7 x_4 + 6 x_5 + 3 x_6 + 5 x_7 + 9 x_8 + 4 x_9 <= 80\n",
+      "constr(2):  9 x_1 + 3 x_2 + 6 x_3 + 5 x_4 + 7 x_5 + x_6 + x_7 + 3 x_8 + 9 x_9 <= 40\n",
+      "constr(3):  5 x_1 + 9 x_2 + 6 x_3 + 5 x_4 + 9 x_5 + 7 x_6 + 8 x_7 + 7 x_8 + 8 x_9 <= 10\n",
+      "constr(4):  7 x_1 + 7 x_2 + 4 x_3 + x_4 + 3 x_5 + 4 x_6 + 8 x_7 + x_8 + 9 x_9 <= 10\n",
+      "constr(5):  x_1 + 6 x_2 + 6 x_3 + x_4 + 6 x_5 + 7 x_6 + 3 x_7 + 8 x_8 + 7 x_9 <= 10\n",
+      "constr(6):  6 x_1 + 6 x_2 + 8 x_3 + 6 x_4 + 10 x_5 + 8 x_6 + x_7 + 4 x_8 + 4 x_9 <= 70\n",
+      "constr(7):  9 x_1 + x_2 + 9 x_3 + 7 x_4 + 10 x_5 + 5 x_6 + 6 x_7 + 2 x_8 + 5 x_9 <= 10\n",
+      "constr(8):  2 x_1 + 7 x_2 + 6 x_3 + 5 x_4 + x_5 + x_6 + 9 x_7 + 2 x_8 + x_9 <= 20\n",
+      "constr(9):  x_3 = 1\n",
+      "constr(10):  x_2 = 0\n",
+      "constr(11):  x_8 = 0\n",
+      "constr(12):  x_9 = 0\n",
+      "constr(13):  x_7 = 0\n",
+      "constr(14):  x_6 = 0\n",
+      "constr(15):  x_1 = 0\n",
+      "constr(16):  x_4 = 0\n",
+      "constr(17):  x_5 = 0\n",
+      "Bounds\n",
+      " 0 <= x_1 <= 1\n",
+      " 0 <= x_2 <= 1\n",
+      " 0 <= x_3 <= 1\n",
+      " 0 <= x_4 <= 1\n",
+      " 0 <= x_5 <= 1\n",
+      " 0 <= x_6 <= 1\n",
+      " 0 <= x_7 <= 1\n",
+      " 0 <= x_8 <= 1\n",
+      " 0 <= x_9 <= 1\n",
+      "End\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print_modelo(best_node.model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9c65a0b3-4196-4b6c-acaa-fd691bbe84d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status =  OptimizationStatus.OPTIMAL\n",
+      "Solution value  = 10.00\n",
+      "\n",
+      "Solution:\n",
+      "x_1 = 0.00\n",
+      "x_2 = 0.00\n",
+      "x_3 = 1.00\n",
+      "x_4 = 0.00\n",
+      "x_5 = 0.00\n",
+      "x_6 = 0.00\n",
+      "x_7 = 0.00\n",
+      "x_8 = 0.00\n",
+      "x_9 = 0.00\n"
+     ]
+    }
+   ],
    "source": [
     "solve(best_node.model)"
    ]
