--- a/branchAndBound.ipynb
+++ b/branchAndBound.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcao auxiliar para 'resolver' um dado modelo\n",
     "def solve(model):\n",
     "    status = model.optimize()\n",
     "    \n",
@@ -51,6 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcao auxiliar para imprimir um dado modelo\n",
     "def print_modelo(model):\n",
     "    model.write(\"model.lp\")\n",
     "    with open(\"model.lp\") as f: \n",
@@ -64,6 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcao auxiliar para testar se um dado número pode ser tratado como inteiro\n",
     "def is_int(n):\n",
     "    return n % 1 == 0"
    ]
@@ -75,6 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcao auxiliar para retornar o custo de um dado modelo presente em um nodo\n",
     "def objectivo_value_cost(node):\n",
     "    node.model.optimize()\n",
     "    return node.model.objective_value"
@@ -87,6 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcao para ler a instância com base num caminho de arquivo passado por parâmetro\n",
     "def read_instance(path):\n",
     "    file = open(path, 'r')\n",
     "    n_var = 0\n",
@@ -132,6 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# \n",
     "class Node():\n",
     "    def __init__(self, model, x, dual_limit = 0, primal_limit = 0, parent=None, left_node=None, rigth_node=None):\n",
     "        self.model = model\n",
@@ -145,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7edd28bc-fa43-4016-a4e3-4e9cc1ded136",
    "metadata": {},
    "outputs": [],
@@ -217,12 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "5aab25d0-4447-4e7a-983e-216ac91f9c16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "modelo, x = read_instance(\"instancias//instancia_5.txt\")\n",
+    "modelo, x = read_instance(\"instancias//instancia_2.txt\")\n",
     "\n",
     "aux1 = modelo.copy()    \n",
     "aux1.optimize()\n",
@@ -233,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "b994bb06-0dea-43b4-ace7-799fe0d46c38",
    "metadata": {},
    "outputs": [],
@@ -247,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ac5494f0-b947-48e3-977c-4041c85785d7",
    "metadata": {},
    "outputs": [
@@ -258,26 +264,24 @@
       "\\Problem name: \n",
       "\n",
       "Minimize\n",
-      "OBJROW: -9 x_1 -7 x_2 -10 x_3 -7 x_4 -9 x_5 -6 x_6 -8 x_7 -4 x_8 -9 x_9\n",
+      "OBJROW: -2 x_1 -10 x_2 -8 x_3 -7 x_4 -10 x_5 -10 x_6 -6 x_7\n",
       "Subject To\n",
-      "constr(0):  4 x_1 + 9 x_2 + 4 x_3 + x_4 + 9 x_5 + 6 x_6 + 3 x_7 + 6 x_8 + x_9 <= 40\n",
-      "constr(1):  3 x_1 + 7 x_2 + 8 x_3 + 7 x_4 + 6 x_5 + 3 x_6 + 5 x_7 + 9 x_8 + 4 x_9 <= 80\n",
-      "constr(2):  9 x_1 + 3 x_2 + 6 x_3 + 5 x_4 + 7 x_5 + x_6 + x_7 + 3 x_8 + 9 x_9 <= 40\n",
-      "constr(3):  5 x_1 + 9 x_2 + 6 x_3 + 5 x_4 + 9 x_5 + 7 x_6 + 8 x_7 + 7 x_8 + 8 x_9 <= 10\n",
-      "constr(4):  7 x_1 + 7 x_2 + 4 x_3 + x_4 + 3 x_5 + 4 x_6 + 8 x_7 + x_8 + 9 x_9 <= 10\n",
-      "constr(5):  x_1 + 6 x_2 + 6 x_3 + x_4 + 6 x_5 + 7 x_6 + 3 x_7 + 8 x_8 + 7 x_9 <= 10\n",
-      "constr(6):  6 x_1 + 6 x_2 + 8 x_3 + 6 x_4 + 10 x_5 + 8 x_6 + x_7 + 4 x_8 + 4 x_9 <= 70\n",
-      "constr(7):  9 x_1 + x_2 + 9 x_3 + 7 x_4 + 10 x_5 + 5 x_6 + 6 x_7 + 2 x_8 + 5 x_9 <= 10\n",
-      "constr(8):  2 x_1 + 7 x_2 + 6 x_3 + 5 x_4 + x_5 + x_6 + 9 x_7 + 2 x_8 + x_9 <= 20\n",
-      "constr(9):  x_3 = 1\n",
-      "constr(10):  x_2 = 0\n",
-      "constr(11):  x_8 = 0\n",
-      "constr(12):  x_9 = 0\n",
-      "constr(13):  x_7 = 0\n",
-      "constr(14):  x_6 = 0\n",
+      "constr(0):  5 x_1 + 7 x_2 + 8 x_3 + x_4 + 7 x_5 + 5 x_6 + 6 x_7 <= 20\n",
+      "constr(1):  x_1 + 6 x_2 + 4 x_3 + 9 x_4 + 10 x_5 + 6 x_6 + 10 x_7 <= 30\n",
+      "constr(2):  4 x_1 + 4 x_2 + 4 x_3 + x_4 + 5 x_5 + 5 x_6 + 10 x_7 <= 40\n",
+      "constr(3):  3 x_1 + 10 x_2 + 8 x_3 + x_4 + 3 x_5 + 3 x_6 + 8 x_7 <= 30\n",
+      "constr(4):  10 x_1 + 8 x_2 + 9 x_3 + 9 x_4 + 7 x_5 + 6 x_6 + 10 x_7 <= 20\n",
+      "constr(5):  6 x_1 + 6 x_2 + 3 x_3 + 6 x_4 + 3 x_5 + 7 x_6 + 2 x_7 <= 80\n",
+      "constr(6):  7 x_1 + 10 x_2 + 7 x_3 + 8 x_4 + 7 x_5 + 8 x_6 + 7 x_7 <= 100\n",
+      "constr(7):  9 x_1 + 8 x_2 + x_3 + x_4 + 8 x_5 + 10 x_6 + 2 x_7 <= 90\n",
+      "constr(8):  x_1 + 5 x_2 + 3 x_3 + 10 x_4 + 2 x_5 + 4 x_6 + 9 x_7 <= 70\n",
+      "constr(9):  9 x_1 + 6 x_2 + x_3 + 4 x_4 + 7 x_5 + 5 x_6 + 10 x_7 <= 60\n",
+      "constr(10):  5 x_1 + 7 x_2 + 4 x_3 + 4 x_4 + 3 x_5 + 4 x_6 + 10 x_7 <= 40\n",
+      "constr(11):  x_2 = 0\n",
+      "constr(12):  x_3 = 0\n",
+      "constr(13):  x_4 = 0\n",
+      "constr(14):  x_7 = 0\n",
       "constr(15):  x_1 = 0\n",
-      "constr(16):  x_4 = 0\n",
-      "constr(17):  x_5 = 0\n",
       "Bounds\n",
       " 0 <= x_1 <= 1\n",
       " 0 <= x_2 <= 1\n",
@@ -286,8 +290,6 @@
       " 0 <= x_5 <= 1\n",
       " 0 <= x_6 <= 1\n",
       " 0 <= x_7 <= 1\n",
-      " 0 <= x_8 <= 1\n",
-      " 0 <= x_9 <= 1\n",
       "End\n",
       "\n"
      ]
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "9c65a0b3-4196-4b6c-acaa-fd691bbe84d2",
    "metadata": {},
    "outputs": [
@@ -308,18 +310,16 @@
      "output_type": "stream",
      "text": [
       "Status =  OptimizationStatus.OPTIMAL\n",
-      "Solution value  = 10.00\n",
+      "Solution value  = 20.00\n",
       "\n",
       "Solution:\n",
       "x_1 = 0.00\n",
       "x_2 = 0.00\n",
-      "x_3 = 1.00\n",
+      "x_3 = 0.00\n",
       "x_4 = 0.00\n",
-      "x_5 = 0.00\n",
-      "x_6 = 0.00\n",
-      "x_7 = 0.00\n",
-      "x_8 = 0.00\n",
-      "x_9 = 0.00\n"
+      "x_5 = 1.00\n",
+      "x_6 = 1.00\n",
+      "x_7 = 0.00\n"
      ]
     }
    ],
